--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
         <div class="loader"></div>
       </div>
       <div class="gallery"></div>
+      <button class="load-more-btn" style="display: none">Load more</button>
     </section>
     <script type="module" src="./main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/js/iziToast.min.js"></script>
